[gd_scene load_steps=2 format=3 uid="uid://do1t7gtp6xneg"]

[ext_resource type="Script" uid="uid://crovoup2lfc2d" path="res://Menu.gd" id="1_vbts7"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 907.0
offset_bottom = 608.0
script = ExtResource("1_vbts7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1155.0
offset_bottom = 652.0
color = Color(0.209956, 0.26311, 0.13178, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 6.0
offset_top = -2.0
offset_right = 769.0
offset_bottom = 440.0

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "RACING GAME"

[node name="StartButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "START"

[node name="VehicleSelectButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Vehicle Selection"

[node name="TrackSelectButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Track Selection"

[node name="QuitButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 284.0
offset_right = 125.0
offset_bottom = 307.0
text = "Selected Info"

[connection signal="pressed" from="ColorRect/VBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/VehicleSelectButton" to="." method="_on_vehicle_select_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/TrackSelectButton" to="." method="_on_track_select_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
